--- a/app/components/Footer/Footer.module.scss
+++ b/app/components/Footer/Footer.module.scss
@@ -1,3 +1,11 @@
 .footer {
-  
+  padding: 32px;
+  background: #6b7a8c;
+  margin-top: 20px;
+  color: white;
+  box-shadow: 0 0 15px 3px black;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  text-align: center;
+  font-size: 24px;
 }
