--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -1,3 +1,11 @@
 .header {
-  
+  padding: 32px;
+  background: #6b7a8c;
+  margin-bottom: 20px;
+  color: white;
+  box-shadow: 0 0 15px 3px black;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  text-align: center;
+  font-size: 24px;
 }
